<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:background="@drawable/bg_activity_004"
    android:id="@+id/signup_screen">



    <ScrollView
        android:id="@+id/scrollView_00"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight = "8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left|bottom"
                android:orientation="horizontal" >

                <TextView
                    android:text="@string/sign_title"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="35sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/promp_bar_003"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent" />

            </LinearLayout>

            <TextView
                android:text="@string/sign_008"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/promp_bar_000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/sign_000"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_000a"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:text="@string/sign_001"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_password00"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_001a"
                android:inputType="textPassword" >

            </EditText>

            <EditText
                android:id="@+id/signup_password01"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_002a"
                android:inputType="textPassword" >


            </EditText>

            <TextView
                android:text="@string/sign_007"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/promp_bar_000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/sign_007d"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_firstname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_007a"
                android:inputType="text" >

            </EditText>

            <EditText
                android:id="@+id/signup_middlename"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_007b"
                android:inputType="text" />



            <EditText
                android:id="@+id/signup_lastname"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_007c"
                android:inputType="text" >

            </EditText>

            <TextView
                android:text="@string/sign_009"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_address"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_009a"
                android:inputType="text" >

            </EditText>

            <EditText
                android:id="@+id/signup_city"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_009b"
                android:inputType="text" >

            </EditText>

            <EditText
                android:id="@+id/signup_state"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_009c"
                android:inputType="text" >

            </EditText>

            <EditText
                android:id="@+id/signup_zip"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_009d"
                android:inputType="number" >

            </EditText>

            <TextView
                android:text="@string/sign_003"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_birthday"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_003a"
                android:inputType="number" >

            </EditText>

            <TextView
                android:text="@string/sign_004"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_004a"
                android:inputType="textEmailAddress" >


            </EditText>

            <TextView
                android:text="@string/sign_005"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/signup_phonenum"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sign_005a"
                android:inputType="phone" >


            </EditText>

            <Button
                android:id="@+id/button_03"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onSignUp_00"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/bluebutton"
                style="@style/ButtonText"
                android:text="@string/sign_006" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>