<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:background="@drawable/bg_activity_004"
    android:id="@+id/login_screen">

    <ScrollView
        android:id="@+id/scrollView_03"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        android:layout_weight = "1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:text="@string/login_title"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="35sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/promp_bar_003"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

            <TextView
                android:text="@string/login_000"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_username"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/login_000a"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:text="@string/login_001"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/login_001a"
                android:inputType="textPassword" >


            </EditText>

            <Button
                android:id="@+id/button_00"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onButton_00"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/bluebutton"
                style="@style/ButtonText"
                android:text="@string/login_004" />

            <TextView
                android:text="@string/login_002"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onButton_01"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/graybutton"
                style="@style/ButtonText"
                android:text="@string/login_005" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:background="@drawable/graybutton"
                style="@style/ButtonText"
                android:text="@string/login_006"
                android:onClick="onButton_02" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
