<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    android:background="@drawable/bg_activity_004"
    android:id="@+id/service_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="left|bottom"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/customer_title"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/promp_bar_003"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >

            <TextView
                android:text="@string/customer_000"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/promp_bar_000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customer_000a"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customer_000b"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/customer_000d"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onServiceLogout"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:background="@drawable/yellowbutton"
                style="@style/ButtonText"
                android:text="@string/universal_001" />

        </TableRow>
    </LinearLayout>

</LinearLayout>
