<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:orientation="vertical"
    android:background="@drawable/bg_activity_005"
    android:id="@+id/menu_screen">



    <ScrollView
        android:id="@+id/scrollView_01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        android:layout_weight = "8">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical"
            android:id="@+id/mainLinearLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left|bottom"
                android:orientation="horizontal"
                android:id="@+id/linlayout">

                <TextView
                    android:text="@string/title_activity_rep_create_package"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="35sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/promp_bar_003"
                    android:layout_width="wrap_content"

                    android:layout_height="fill_parent" />

            </LinearLayout>

            <TextView
                android:text="@string/create_000"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/promp_bar_000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical|center_horizontal">


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_003"
                    android:id="@+id/checkBox1" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_004"
                    android:id="@+id/checkBox2" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_005"
                    android:id="@+id/checkBox3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/create_001"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/promp_bar_000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/priceLogo" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/enterPrice"
                    android:layout_gravity="center_horizontal"
                    android:hint="99.99" />




            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/create_008"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="25sp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/promp_bar_000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/durationLogo" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:id="@+id/enterDuration"
                    android:layout_gravity="center_horizontal"
                    android:inputType="number"
                    android:hint="Number of months" />




            </LinearLayout>



            <Button
                android:id="@+id/button_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginTop="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:text="@string/create_002"
                android:background="@drawable/greenbutton"
                style="@style/ButtonText"
                android:onClick="onClickCreatePackage" />

            <TextView
                android:text="@string/create_007"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:background="@drawable/promp_bar_000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>




    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_09a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMenuLogout"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/yellowbutton"
                style="@style/ButtonText"
                android:text="@string/universal_001" />

        </TableRow>
    </LinearLayout>

</LinearLayout>

